--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "@parcel/transformer-sass": "^2.8.0",
     "parcel": "^2.8.0",
     "sharp": "^0.31.3"
+  },
+  "dependencies": {
+    "next": "^15.3.1"
   }
 }
